Make logo visible on desktop Fix #101

--- a/less/menus.less
+++ b/less/menus.less
@@ -5,10 +5,9 @@
 // Body
 // -------------------------
 
-@media ( max-width: @screen-xs-max ) {
-	.menu-toggle {
-		float:left;
-		margin-left:15px;
-		margin-right:0;
-	}
+.menu-toggle {
+	float:left;
+	margin-left:15px;
+	margin-right:0;
 }
+
