--- a/less/variables.less
+++ b/less/variables.less
@@ -46,3 +46,11 @@
 // -------------------------
 
 @zindex-adminbar:				99999;
+
+// Grid system
+// --------------------------------------------------
+
+// Point at which the navbar stops collapsing
+@grid-float-breakpoint:     @screen-tablet;
+// Point at which the searchbar stops collapsing
+@search-float-breakpoint:		@screen-desktop;
